# DocManager

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_TEST_REPORT.md  DEMO_GUIDE.md  DEPLOYMENT_STEPS.md  Dockerfile.test  EMAIL_SETUP_QUICK.md  FINAL_CLEANUP_SUMMARY.md  GITHUB_SETUP.md  Makefile  PRODUCTION_CHECKLIST.md  PRODUCTION_TESTING_GUIDE.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_TROUBLESHOOTING.md  WINDOWS_PACKAGING_COMPLETE.md  architecture.md  build_package.sh  docker-compose.full.yml  docker-compose.test.yml  docker-compose.yml  pytest.ini  start.bat  start.sh  start_local.sh  test_full_application.sh  test_packaged_app.sh  vercel.json
.ai/: CHANGELOG.md
.github/workflows/: security.yml  test.yml
ca_desktop/: README.md
ca_desktop/backend/: .env.example  DocManager.spec  Dockerfile  README_WHATSAPP.md  main_prod.py  package-lock.json  package.json  pyproject.toml  requirements-prod.txt  requirements.txt
ca_desktop/backend/alembic/: env.py
ca_desktop/backend/alembic/versions/: 735ddcecd465_add_whatsapp_tables.py  a5385ee3247d_initial_migration.py  bf8a455fc811_add_slug_and_display_name_to_user_model.py
ca_desktop/backend/scripts/: RUN_E2E_TESTS.md  setup_test_data.py  test_comprehensive_e2e.py  test_e2e_workflow.py
ca_desktop/backend/src/: config.py  config_prod.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py
ca_desktop/backend/src/middleware/: rate_limit.py  request_logging.py
ca_desktop/backend/src/modules/files/: streamer.py
ca_desktop/backend/src/routers/: auth.py  ca_profile.py  clients.py  compliance.py  documents.py  messaging.py  public.py  reminders.py  reminders_v2.py  tags.py  whatsapp.py
ca_desktop/backend/src/scripts/: seed_compliance.py  seed_data.py
ca_desktop/backend/src/services/: __init__.py  audit_service.py  email_service.py  reminder_service.py
ca_desktop/backend/src/services/whatsapp/: __init__.py  bot_state.py  client.js  document_service.py  handler.py  mock_server.js  server.js  templates.py
ca_desktop/backend/src/utils/: __init__.py  bulk_upload.py  invite.py
ca_desktop/backend/tests/: manual_test_workflow.py  test_production_ready.py  test_whatsapp_integration.py
ca_desktop/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ca_desktop/installer/: README_INSTALL.md  StartDocManager.bat  build_windows.bat
ca_website/: .env.example  DEPLOY_TO_VERCEL.md  README.md  index.html  package-lock.json  package.json
ca_website/src/: App.tsx
dental_website/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
dental_website/src/: App.tsx  data.ts  index.css
dist_package/DocManager-v1.0.0/: README.txt
docker/windows-test/: Dockerfile  test_performance.py
docs/api/: reference.md
docs/archive/: BROWSER_TESTING_WORKFLOW.md  FRONTEND_UPDATES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  REMINDERS_UPGRADE_COMPLETE.md  SERVICE_STATUS_REPORT.md  TESTING_COMPLETE.md  UI_IMPROVEMENTS_COMPLETE.md
docs/deployment/: docker_deployment.md
docs/developer/: DEVELOPMENT_SETUP.md
docs/guides/: DEPLOYMENT_GUIDE.md
docs/user_guides/: ADMIN_GUIDE.md  CA_USER_GUIDE.md  CLIENT_USER_GUIDE.md  WHATSAPP_BOT_GUIDE.md  local_setup.md
installer/inno_setup/: DocManager.iss
license_server/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
license_server/alembic/: env.py
license_server/src/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
license_server/tests/: test_ca.py  test_license_logic.py
license_server/ui/: Dockerfile  index.html  package-lock.json  package.json
scripts/: bootstrap_local.py  lint.sh  run_dev.sh  run_tests.sh  setup_database.py  setup_demo_data.py  test_all_services.sh  test_everything.py
shared/: __init__.py  pyproject.toml  setup.py
shared/crypto/: __init__.py  fingerprint.py  keys.py  signing.py  tokens.py
shared/utils/: __init__.py  constants.py  logging.py  validators.py
test_assets/: README.md
test_assets/bulk_upload/: clients_import.xlsx
tests/: conftest.py  run_e2e.py  test_phase2_comprehensive.py  test_windows_compat.py
tests/api/: test_api_complete.py
tests/integration/: test_audit_logging.py  test_auth_flow.py  test_ca_desktop_api.py  test_ca_profile.py  test_compliance.py  test_document_upload.py  test_invite_system.py  test_public_api.py  test_reminders.py  test_scanning_integration.py  test_shared_download.py
tests/security/: test_security_suite.py
tests/unit/: test_compliance_placeholder.py  test_crypto.py  test_invite_utils.py  (+4 more)
(+79 files in other folders)
